# django-admin-search-filter

./: LICENSE  README.rst  pyproject.toml  setup.py
django_admin_search_filter/: __init__.py
django_admin_search_filter/templates/: input_admin_filter.html
